# ROSS2

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
docs/notes/: 6-17-26.md
ross/morsalin/: hog.py  human_detection_picture.py  human_detection_video.py
ross2/: __init__.py  __main__.py  cli.py
ross2/commands/: flash.py  fuel.py  serial.py  slam.py  stream.py  stream_pi.py  teleop.py
ross2/net/: robot.py
ross2/slam/: pipeline.py  reconstruct.py  vision.py  vision_pi.py
