[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ross2"
version = "0.1.0"
description = "Tunnel scouting prototype - Pi local capture, streaming server, and pipe detection."
authors = [
  { name = "The Cooper Union for the Advancement of Science and Art" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "~=3.12.0"

# Core dependencies needed to run the CLI and local streaming server
dependencies = [
    "fastapi>=0.110.0",
    "loguru",
    "opencv-python-headless>=4.8.0", # Headless avoids X11/GUI display dependency issues on a Pi CLI
    "python-dotenv",
    "typer>=0.12",
    "uvicorn>=0.28.0",
]

[project.scripts]
ross = "ross2.cli:app"

[project.optional-dependencies]
dev = ["ruff"]
# Grouped CV/Deep Learning libraries for your partner's base model
detection = [
    "numpy>=1.26.0",
    "torch>=2.2.0",
    "torchvision",
    "ultralytics", # Included for YOLOv8/object detection workflows
]

[tool.ruff]
line-length = 99
src = ["ross2"]
include = ["pyproject.toml", "ross2/**/*.py"]
extend-exclude = ["notebooks"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["ross2"]
force-sort-within-sections = true